--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
@@ -29,5 +30,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
